# parallel-universe-novel

./: .gitignore  BACKEND_COMPATIBILITY_BRIDGE_PLAN.md  BACKEND_TEAM_HANDOFF_20260608.md  BACKEND_TEAM_PACKAGE_AUDIT_20260612.md  HANDOFF_README.md  INTEGRATION_ISSUES.md  PARALLEL_UNIVERSE_PROTOTYPE_HANDOFF.md  README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  AGENTS.md  CODEX_HANDOFF_PROMPT.md  Dockerfile  NarrativeOS_Membership_Model_And_Codex_Addendum_CN.md  README.md  TASKS_FOR_CODEX.md  alembic.ini  openapi.checksum  openapi.json  opencode.json  pyproject.toml  requirements.txt
backend/.github/: pull_request_template.md
backend/configs/: monetization_tiers.json  policy.example.yaml  scoring_weights.yaml
backend/contracts/: frontend_view_models.ts  python_interfaces.py
backend/db/: postgres_schema.sql
backend/docs/: 01_product_scope.md  02_architecture.md  03_state_schema.md  04_event_atom_dsl.md  05_route_search.md  06_memory_promise_ledger.md  07_api_contracts.md  08_eval_and_metrics.md  09_safety_and_rights.md  10_mvp_roadmap.md  11_karma_engine_status.md  12_commercialization_gap.md  deployment_runbook.md  gpt_handoff_status_and_commercialization.md  incident_playbook.md  narrative_eval_v0_1.md  phase_0_summary.md  phase_10_summary.md  phase_11_summary.md  phase_12_summary.md  phase_13_summary.md  phase_14_summary.md  phase_15_summary.md  phase_1_summary.md  phase_2_summary.md  phase_3_summary.md  phase_4_summary.md  phase_5_summary.md  phase_6_summary.md  phase_7_summary.md  phase_8_summary.md  phase_9_summary.md  (+3 more)
(+818 files in other folders)
